tests/baselines/reference/mergedDeclarations2.errors.txt
==== tests/cases/compiler/mergedDeclarations2.ts (1 errors) ====
    enum Foo {
        b
    }
    enum Foo {
        a = b
    }
    
    module Foo {
        export var x = b
                       ~
!!! error TS2095: Could not find symbol 'b'.
    }